# Agentic-Framework-movie-generator

./: AI_Movie_Generation_Framework_Implementation_Plan.md  LICENSE  SETUP.md  api_reference.md  example_test.py  exampleconfig.yaml  exampleproject.py  pyproject.toml  readme.md  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.py
config/: agents.yaml  pipeline.yaml  resources.yaml  system.yaml
docs/api/: agents.md
src/agents/: analysis_agent.py  controller_agent.py
src/agents/3d/: base_3d_agent.py  environment_builder.py  lighting_system.py  model_generator.py  physics_simulator.py  rigging_system.py  texture_generator.py
src/agents/analysis/: analysis_agent.py
src/agents/assets/: asset_manager.py
src/agents/audio/: audio_mixer.py  base_audio_agent.py  music_composer.py  sound_effect_generator.py  voice_generator.py
src/agents/quality/: base_quality_agent.py  content_moderator.py  continuity_checker.py  dashboard.py  feedback_analyzer.py  performance_optimizer.py  technical_validator.py
src/api/: auth.py  dependencies.py  docs.py  error_handling.py  main.py  models.py  websocket.py
src/api/auth/: endpoints.py  (+3 more)
src/core/: agent_manager.py  api_endpoints.py  backup_manager.py  base_agent.py  cli_interface.py  config_manager.py  controller_agent.py  error_handler.py  event_handler.py  export_handler.py  logging_manager.py  message_bus.py  performance_optimizer.py  project_templates.py  state_manager.py  system_integrator.py  system_lifecycle.py  system_monitor.py  task_scheduler.py
src/tests/: system_tests.py
(+47 files in other folders)
