[tool.poetry]
name = "ai-movie-generation-framework"
version = "0.1.0"
description = "An open-source framework for AI-powered movie generation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
fastapi = "^0.104.0"
redis = "^5.0.1"
pymongo = "^4.6.0"
torch = "^2.1.0"
transformers = "^4.35.0"
diffusers = "^0.21.4"
bark = "^0.1.0"
openai-whisper = "^20231117"
bpy = "^3.6.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 